# net_shop

./: .gitignore  catalog_data.json  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_bd.py
catalog/migrations/: 0001_initial.py  0002_alter_product_creating_date_and_more.py  0003_blog_alter_category_options.py  0004_alter_blog_view_count.py  0005_alter_blog_view_count.py  0006_version.py  0007_product_user.py  0008_blog_user_alter_blog_is_published.py  0009_alter_blog_options.py  0010_alter_product_options_product_is_published.py
catalog/tempaltetags/: my_tags.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users_app/: forms.py  models.py  urls.py  views.py
users_app/management/commands/: create_su.py
users_app/migrations/: 0001_initial.py  0002_alter_user_options.py
users_app/templates/users_app/: email_verification.html  register.html  user_form.html
